otel-demo/base/patches/route-grafana.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
