otel-demo/base/patches/route-jaeger.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jaeger
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  to:
    kind: Service
    name: jaeger
    weight: 100
  port:
    targetPort: http-query
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
